[gd_scene load_steps=3 format=3 uid="uid://0pqsghgdlmjx"]

[ext_resource type="PackedScene" uid="uid://5idum0psvn3d" path="res://Assets/Nodes/card.tscn" id="1_atgfi"]
[ext_resource type="Script" uid="uid://ycv6vhpum2im" path="res://Assets/Nodes/tower.gd" id="1_ujbpf"]

[node name="Tower" type="Node2D"]
script = ExtResource("1_ujbpf")

[node name="Card1" parent="." instance=ExtResource("1_atgfi")]
position = Vector2(0, -212)

[node name="Card2" parent="." instance=ExtResource("1_atgfi")]
z_index = 2
position = Vector2(-24, -164)

[node name="Card3" parent="." instance=ExtResource("1_atgfi")]
z_index = 2
position = Vector2(24, -164)

[node name="Card4" parent="." instance=ExtResource("1_atgfi")]
z_index = 4
position = Vector2(-48, -109)

[node name="Card5" parent="." instance=ExtResource("1_atgfi")]
z_index = 4
position = Vector2(0, -109)

[node name="Card6" parent="." instance=ExtResource("1_atgfi")]
z_index = 4
position = Vector2(48, -109)

[node name="Card7" parent="." instance=ExtResource("1_atgfi")]
z_index = 6
position = Vector2(-72, -55)

[node name="Card8" parent="." instance=ExtResource("1_atgfi")]
z_index = 6
position = Vector2(-24, -55)

[node name="Card9" parent="." instance=ExtResource("1_atgfi")]
z_index = 6
position = Vector2(24, -55)

[node name="Card10" parent="." instance=ExtResource("1_atgfi")]
z_index = 6
position = Vector2(72, -55)

[node name="Card11" parent="." instance=ExtResource("1_atgfi")]
z_index = 8
position = Vector2(-96, 0)

[node name="Card12" parent="." instance=ExtResource("1_atgfi")]
z_index = 8
position = Vector2(-48, 0)

[node name="Card13" parent="." instance=ExtResource("1_atgfi")]
z_index = 8

[node name="Card14" parent="." instance=ExtResource("1_atgfi")]
z_index = 8
position = Vector2(48, 0)

[node name="Card15" parent="." instance=ExtResource("1_atgfi")]
z_index = 8
position = Vector2(96, 0)

[node name="Card16" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(-120, 54)

[node name="Card17" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(-72, 54)

[node name="Card18" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(-24, 54)

[node name="Card19" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(24, 54)

[node name="Card20" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(72, 54)

[node name="Card21" parent="." instance=ExtResource("1_atgfi")]
z_index = 10
position = Vector2(120, 54)

[node name="Card22" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(-144, 110)

[node name="Card23" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(-96, 110)

[node name="Card24" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(-48, 110)

[node name="Card25" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(0, 110)

[node name="Card26" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(48, 110)

[node name="Card27" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(96, 110)

[node name="Card28" parent="." instance=ExtResource("1_atgfi")]
z_index = 12
position = Vector2(144, 110)

[node name="Card29" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(-168, 164)

[node name="Card30" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(-120, 164)

[node name="Card31" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(-72, 164)

[node name="Card32" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(-24, 164)

[node name="Card33" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(24, 164)

[node name="Card34" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(72, 164)

[node name="Card35" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(120, 164)

[node name="Card36" parent="." instance=ExtResource("1_atgfi")]
z_index = 14
position = Vector2(168, 164)

[node name="burntimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Deck" parent="." instance=ExtResource("1_atgfi")]
z_index = 20
position = Vector2(-80, -335)
rotation = -1.57217

[connection signal="timeout" from="burntimer" to="." method="_on_burntimer_timeout"]
